[gd_scene load_steps=5 format=3 uid="uid://oikjkafwpdec"]

[ext_resource type="Script" path="res://Scripts/pausa.gd" id="1_fw1kw"]
[ext_resource type="FontFile" uid="uid://40ddt3grx5jt" path="res://Assets/Super Meat Boy/resources/Fonts/meat-boy-font.ttf" id="1_qrvgf"]
[ext_resource type="Texture2D" uid="uid://bht5plrk3f6oy" path="res://Assets/Super Meat Boy/pc/Menus/jefePausa.png" id="2_oxaf1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_8mbga"]

[node name="Pausa" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fw1kw")

[node name="TextureRect2" type="ColorRect" parent="."]
offset_left = -4.0
offset_right = 1600.0
offset_bottom = 196.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 231.0
offset_right = 1597.0
offset_bottom = 693.0
color = Color(1, 1, 1, 0.0666667)

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 731.0
offset_right = 1607.0
offset_bottom = 901.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 398.0
offset_top = 45.0
offset_right = 1130.0
offset_bottom = 123.0
theme_override_fonts/font = ExtResource("1_qrvgf")
theme_override_font_sizes/font_size = 77
text = "Juego En Pausa"

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1012.0
offset_top = 237.0
offset_right = 1311.0
offset_bottom = 680.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 39

[node name="ResumirJuego" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Resumir Juego"
icon = SubResource("ViewportTexture_8mbga")

[node name="Volver_Al_Mapa" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Volver al Mapa
"

[node name="Salir_Juego" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Salir del Juego
"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer"]
position = Vector2(-600, 285)
scale = Vector2(1.09176, 1.11538)
texture = ExtResource("2_oxaf1")

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumirJuego" to="." method="_on_resumir_juego_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Volver_Al_Mapa" to="." method="_on_volver_al_mapa_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Salir_Juego" to="." method="_on_salir_juego_pressed"]
